<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:style="@style/confirmation_dialog_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/create_account_title"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/description"
            tools:text="You are gonna create a new account on this device."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:text="@string/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/accept"
            android:text="@string/create"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>