<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".login.presentation.LoginFragment">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_field"
            android:inputType="textEmailAddress"
            android:lines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_field"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:inputType="textPassword"
            android:lines="1"
            app:layout_constraintTop_toBottomOf="@id/username_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/wrong_credentials"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:text="@string/wrong_credentials"
            android:id="@+id/wrong_credentials"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="6dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/password_field"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrong_credentials"
            app:layout_constraintStart_toStartOf="@id/password_field"
            app:layout_constraintEnd_toStartOf="@id/create_button"
            android:layout_width="100dp" android:layout_height="60dp"
            android:text="@string/login"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/create_button"
            app:layout_constraintVertical_chainStyle="packed"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrong_credentials"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="@id/password_field"
            android:layout_width="100dp" android:layout_height="60dp"
            android:text="@string/create_account" app:layout_constraintVertical_bias="0.021"/>

    <TextView
            android:text="@string/recover_password"
            android:id="@+id/recover_password"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>